--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bezier-easing": "^2.1.0",
+    "cannon": "^0.6.2",
     "express": "^4.17.1",
+    "node-fetch": "^2.6.1",
     "socket.io": "^4.0.0",
-    "three": "^0.126.1"
+    "three": "^0.126.1",
+    "tween.js": "^16.6.0"
   }
 }
