--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "express": "^4.17.1",
     "node-fetch": "^2.6.1",
     "socket.io": "^4.0.0",
-    "three": "^0.126.1",
-    "tween.js": "^16.6.0"
+    "three": "^0.126.1"
   },
   "devDependencies": {
     "@babel/core": "^7.13.13",
