--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "localforage": "^1.9.0",
     "node-fetch": "^2.6.1",
     "socket.io": "^4.0.0",
-    "three": "^0.126.1"
+    "three": "github:oliver-veal/three.js"
   },
   "devDependencies": {
     "@babel/core": "^7.13.13",
