--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "main": "server.js",
   "scripts": {
     "build": "webpack",
+    "watch": "webpack --watch",
     "format": "npm run format:documents && npm run format:scripts && npm run format:styles",
     "format:documents": "prettier --write \"**/*.html\"",
     "format:scripts": "prettier --write \"**/*.js\" && eslint --ext \".js\" --fix",
@@ -42,10 +43,14 @@
   "devDependencies": {
     "@babel/core": "^7.13.13",
     "@babel/eslint-parser": "^7.13.10",
+    "css-loader": "^5.2.0",
     "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.1",
     "prettier": "^2.2.1",
+    "style-loader": "^2.0.0",
     "stylelint": "^13.12.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^21.0.0",
