--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "localforage": "^1.9.0",
     "node-fetch": "^2.6.1",
     "socket.io": "^4.0.0",
-    "socket.io-client": "^4.0.1",
-    "three": "https://github.com/oliver-veal/three.js.git"
+    "socket.io-client": "^4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.13.13",
@@ -57,6 +56,7 @@
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^21.0.0",
     "stylelint-order": "^4.1.0",
+    "three": "github:oliver-veal/three.js",
     "webpack": "^5.30.0",
     "webpack-cli": "^4.6.0"
   }
