--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "localforage": "^1.9.0",
     "node-fetch": "^2.6.1",
     "socket.io": "^4.0.0",
-    "socket.io-client": "^4.0.1"
+    "socket.io-client": "^4.0.1",
+    "three": "^0.127.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.13",
